upodated banner image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <main class="l-main">
             <!--===== HOME =====-->
-            <section class="home " id="home" style="background-image: url('baner.jpg');background-color: #cccccc;background-repeat: no-repeat;background-size: cover;color:#f0f0f0; position: relative;bottom: 100px;text-align: center;color:white;">
+            <section class="home " id="home" style="background-image: url('banner.jpeg');background-color: #cccccc;background-repeat: no-repeat;background-size: cover;color:#f0f0f0; position: relative;bottom: 100px;text-align: center;color:white;">
                 <div class="home__data bd-grid">
                     <!-- <h1 class="home__title">SUMMIT<br>LIFE, CARE<span class="home__title-color"></span><br>   PLANNING</h1> -->
                     <div style="margin-top:200px;"></div>
