--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="icon" type="image/png" href="fav.png"/>
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>SUMMIT LIFE CARE PLANNING</title>
+        <title>Summit Life Care Planning</title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -39,20 +40,14 @@
             <!--===== HOME =====-->
             <section class="home " id="home" style="background-image: url('banner.jpeg');background-color: #cccccc;background-repeat: no-repeat;background-size: cover;color:#f0f0f0; position: relative;bottom: 100px;text-align: center;color:white;">
                 <div class="home__data bd-grid">
-                    <!-- <h1 class="home__title">SUMMIT<br>LIFE, CARE<span class="home__title-color"></span><br>   PLANNING</h1> -->
                     <div style="margin-top:200px;"></div>
                     <div class="home__social">
-                        <!-- <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                        <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                        <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a> -->
                     </div>
                     <br>
                     <br>
                     <div class="home__data bd-grid"> 
-                        <h1 class="home__title">SUMMIT LIFE CARE PLANNING, LLC</h1>
+                        <h1 class="home__title" style="  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">SUMMIT LIFE CARE PLANNING, LLC</h1>
                     </div>
-
-                    <!-- <a href="#" class="button">Contact</a> -->
                 </div>
 
 
@@ -77,7 +72,7 @@
                             I have been working as a certified nurse life care planner since 2016. I started life care planning at BalaCare Solutions, under the mentorship of Mona Yudkoff. I later served as Clinical Lead Nurse Life Care Planner at Promedica Verity Group. I have authored several hundred reports that address the long-term healthcare needs of medically complex individuals, including those with spinal cord injury, traumatic brain injury, chronic pain, amputation, birth injury, orthopedic injuries and chronic pain conditions. With a strong clinical background in pediatrics, I have a special expertise in addressing the long-term needs of children with cerebral palsy, autism and a variety of rare genetic conditions. I have testified on more than 50 occasions and have been admitted as an expert witness in more than half a dozen states. I have maintained an active clinical practice alongside my work as a life care planner. 
                         
                          <br>
-                        <p>CORE COMPETENCIES: </p>
+                        <h2 class="section-title">CORE COMPETENCIES: </h2>
                         <ul style="list-style: disc;margin-left: 20px;text-align: left;">
                             <li>Expertise as a nurse life care planner</li>
                             <li>Extensive and ongoing experience as a nurse practitioner</li>
@@ -96,7 +91,7 @@
 
                 <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Professional & Educational Background</h2>
+                        <!-- <h2 class="skills__subtitle">Professional & Educational Background</h2> -->
                         <p class="skills__text">
                             I began my nursing career as a registered nurse in the cardiac intensive care unit at D.C. Children’s Hospital. After completing a Master’s in Nursing with an emphasis in Acute / Chronic Pediatrics, I assumed a position as a nurse practitioner in the Section of Hematology at St. Chrisotpher’s Hospital for Children. I have been working there ever since! In that capacity, I perform physical examinations, order diagnostic studies, prescribe medications, make referrals to other specialists, and provide extensive education to patients and their families. I have also served as a clinical nurse preceptor to graduate nursing students and I assist in clinical drug trials. I worked briefly at Quality Community Health Center in Philadelphia in 2021, providing primary care services to children and adolescents. In 2015 - 2016, I provided private case management services to children and adults with extensive medical and nursing needs. I am passionate about providing quality care to my patients. 
                         </p>                   
@@ -117,7 +112,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Master of Science in Nursing (MSN), August 2009 University of Pennsylvania, Philadelphia, PA
+                                    Master of Science in Nursing (MSN) 
+                                    <br>
+                                    <span class="expirience-date"> August 2009 University of Pennsylvania, Philadelphia, PA</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -125,7 +122,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Bachelor of Science in Nursing (BSN), December 2005 University of Pennsylvania, Phildalephia, PA
+                                    Bachelor of Science in Nursing (BSN) 
+                                    <br>
+                                    <span class="expirience-date">December 2005 University of Pennsylvania, Phildalephia, PA</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -133,7 +132,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Bachelor of Biology (BA), May 2004 Yeshiva University, New York, NY
+                                    Bachelor of Biology (BA) 
+                                    <br>
+                                    <span class="expirience-date">May 2004 Yeshiva University, New York, NY</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -142,7 +143,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Certified Nurse Life Care Planner (CNLCP), Setting the Standards in Life Care Planning, 2015 Keylnco University (online)
+                                    Certified Nurse Life Care Planner (CNLCP) 
+                                    <br>
+                                    <span class="expirience-date">Setting the Standards in Life Care Planning, 2015 Keylnco University (online)</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -152,7 +155,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Registered Nurse (RN), Pennsylvania, 2008 - present
+                                    Registered Nurse (RN) 
+                                    <br>
+                                    <span class="expirience-date">Pennsylvania, 2008 - present</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -161,7 +166,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Nurse Practitioner (CRNP), Pennsylvania, 2009 - present
+                                    Nurse Practitioner (CRNP) 
+                                    <br>
+                                    <span class="expirience-date">Pennsylvania, 2009 - present</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -170,7 +177,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Certified Nurse Life Care Planner, CNLCP, 2016 - present
+                                    Certified Nurse Life Care Planner, CNLCP 
+                                    <br>
+                                    <span class="expirience-date">2016 - present</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -179,7 +188,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name">
-                                    Certified Rehabilitation Registered Nurse, CRRN, 2020 - present
+                                    Certified Rehabilitation Registered Nurse, CRRN 
+                                    <br>
+                                    <span class="expirience-date">2020 - present</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
