--- a/index.html
+++ b/index.html
@@ -230,10 +230,11 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <form class="contact__form" action="https://formspree.io/f/mnqeekrk"
+                    method="POST">
+                        <!-- <input type="text" placeholder="Name" class="contact__input"> -->
+                        <input type="mail" placeholder="Your Email" class="contact__input">
+                        <textarea name="message" id="" cols="0" rows="10" class="contact__input" placeholder="Your Message"></textarea>
                         <input type="button" value="Send" class="contact__button button">
                     </form>
                 </div>
@@ -244,9 +245,9 @@
         <footer class="footer">
             <p class="footer__title">Summit Life Care Planning, LLC</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <!-- <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a> -->
             </div>
             <p class="footer__copy">184 Summit Lane, Bala Cynwyd, PA 19004 <br> 1 (610) 639-6456 | summitlcp@outlook.com</p>
         </footer>
