--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <!-- <input type="text" placeholder="Name" class="contact__input"> -->
                         <input type="mail" placeholder="Your Email" class="contact__input">
                         <textarea name="message" id="" cols="0" rows="10" class="contact__input" placeholder="Your Message"></textarea>
-                        <button type="button" type="submit" value="Send" class="contact__button button">Send</button>
+                        <button type="submit" class="contact__button button">Send</button>
                     </form>
                 </div>
             </section>
