--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <form class="contact__form" action="https://formspree.io/f/mnqeekrk"
                     method="POST">
                         <!-- <input type="text" placeholder="Name" class="contact__input"> -->
-                        <input type="mail" placeholder="Your Email" class="contact__input">
+                        <input type="mail" name="email" placeholder="Your Email" class="contact__input">
                         <textarea name="message" id="" cols="0" rows="10" class="contact__input" placeholder="Your Message"></textarea>
                         <button type="submit" class="contact__button button">Send</button>
                     </form>
