changed doctor image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </p>                   
                     </div>
                         <div>              
-                            <img src="assets/img/doctor.svg" alt="" class="skills__img">
+                            <img src="assets/img/heart-stethoscope.png" alt="" class="skills__img">
                         </div>
                 </div>
             </section>
