--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                         
                          <br>
                         <h2 class="section-title">CORE COMPETENCIES: </h2>
-                        <ul style="list-style: disc;margin-left: 20px;text-align: left;">
+                        <!-- <ul style="list-style: disc;margin-left: 20px;text-align: left;"> -->
+                        <ul>
                             <li>Expertise as a nurse life care planner</li>
                             <li>Extensive and ongoing experience as a nurse practitioner</li>
                             <li>Excellent written and verbal communication skills</li>
