--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                          <br>
                         <h2 class="section-title">CORE COMPETENCIES: </h2>
                         <!-- <ul style="list-style: disc;margin-left: 20px;text-align: left;"> -->
-                        <ul>
+                        <ul style="text-align: center;">
                             <li>Expertise as a nurse life care planner</li>
                             <li>Extensive and ongoing experience as a nurse practitioner</li>
                             <li>Excellent written and verbal communication skills</li>
