--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                     <div>
                         <h2 class="about__subtitle">Meet Tamar</h2>
                         <p class="about__text">
-                            My passion is working with individuals to maximize their health and well-being. Whether as a bedside nurse in the intensive care unit, a nurse practitioner in an outpatient specialty clinic, or a life care planner determining long-term healthcare needs, I have demonstrated a commitment to compassionate quality care.
+                            My passion is working with individuals to maximize their health and well-being. Whether as a bedside nurse in the intensive care unit, a nurse practitioner in a specialty clinic, or a life care planner determining long-term healthcare needs, I have demonstrated a commitment to compassionate quality care.
                         </p> 
+                        <!-- <br> -->
+                        <br>
                         <p class="about__text">
                             I have recently launched my own company - Summit Life Care Planning, LLC - which provides life care planning services for individuals with complex medical needs. Whether in the context of litigation or not, I provide comprehensive reports that determine the long-term healthcare needs for an individual and project cost for care over the individual's lifetime.
                         </p>
@@ -98,7 +100,9 @@
                     <div>
                         <!-- <h2 class="skills__subtitle">Professional & Educational Background</h2> -->
                         <p class="skills__text">
-                            I have been working as a certified nurse life care planner since 2016. I started life care planning at BalaCare Solutions, under the mentorship of Mona Yudkoff. I later served as Lead Clinical Nurse Life Care Planner at Promedica Verity Group. In 2024, I launched Summit Life Care Planning, LLC to provide lifecare planning services in an efficient and state-of-the-art manner. I have authored several hundred reports that address the long-term healthcare needs of medically complex individuals, including those with spinal cord injury, traumatic brain injury, chronic pain, amputation, birth injury, orthopedic injuries and chronic pain conditions. With a strong clinical background in pediatrics, I have special expertise in addressing the long-term needs of children with cerebral palsy, autism and a variety of rare genetic conditions. I have testified on more than 50 occasions and have been admitted as an expert witness in more than half a dozen states. 
+                            I have been working as a certified nurse life care planner since 2016. I started life care planning at BalaCare Solutions, under the mentorship of Mona Yudkoff. I later served as Lead Clinical Nurse Life Care Planner at Promedica Verity Group. 
+                            In 2024, I launched Summit Life Care Planning, LLC to provide life care planning services with integrity, efficiency and excellence.
+                            I have authored several hundred reports that address the long-term healthcare needs of medically complex individuals, including those with spinal cord injury, traumatic brain injury, chronic pain, amputation, birth injury, orthopedic injuries and chronic pain conditions. With a strong clinical background in pediatrics, I have special expertise in addressing the long-term needs of children with cerebral palsy, autism and a variety of rare genetic conditions. I have testified on more than 50 occasions and have been admitted as an expert witness in more than half a dozen states. 
                         </p> 
                         <p class="skills__text">
                             Aside from life care planning, I have had an extensive career in clinical practice. I began my nursing career as a registered nurse in the cardiac intensive care unit at D.C. Children’s Hospital. After completing a Master’s in Nursing with an emphasis in Acute / Chronic Pediatrics, I assumed a position as a nurse practitioner in the Section of Hematology at St. Chrisotpher’s Hospital for Children, where I worked for 15 years! In that capacity, I performed physical examinations, ordered diagnostic studies, prescribed medications, made referrals to other specialists, and provided extensive education to patients and their families. I also served as a clinical nurse preceptor to graduate nursing students and assisted in clinical drug trials. I worked briefly at Quality Community Health Center in Philadelphia in 2021, providing primary care services to children and adolescents. In 2015 - 2016, I provided private case management services to children and adults with extensive medical and nursing needs.
@@ -124,7 +128,7 @@
                                 <span class="skills__name" style="text-align: left;">
                                     Master of Science in Nursing (MSN) 
                                     <br>
-                                    <span class="expirience-date"> August 2009 University of Pennsylvania, Philadelphia, PA</span>
+                                    <span class="expirience-date"> August 2009, University of Pennsylvania, Philadelphia, PA</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -134,7 +138,7 @@
                                 <span class="skills__name">
                                     Bachelor of Science in Nursing (BSN) 
                                     <br>
-                                    <span class="expirience-date">December 2005 University of Pennsylvania, Phildalephia, PA</span>
+                                    <span class="expirience-date">December 2005, University of Pennsylvania, Phildalephia, PA</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -144,7 +148,7 @@
                                 <span class="skills__name" style="text-align: left;">
                                     Bachelor of Biology (BA) 
                                     <br>
-                                    <span class="expirience-date">May 2004 Yeshiva University, New York, NY</span>
+                                    <span class="expirience-date">May 2004, Yeshiva University, New York, NY</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -167,7 +171,7 @@
                                 <span class="skills__name" style="text-align: left;">
                                     Registered Nurse (RN) 
                                     <br>
-                                    <span class="expirience-date">Pennsylvania, 2008 - present</span>
+                                    <span class="expirience-date">2008 - present, Pennsylvania</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -178,18 +182,18 @@
                                 <span class="skills__name" style="text-align: left;">
                                     Nurse Practitioner (CRNP) 
                                     <br>
-                                    <span class="expirience-date">Pennsylvania, 2009 - present</span>
+                                    <span class="expirience-date"> 2009 - present, Pennsylvania</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
                         </div>
     
-                        <div class="skills__data">
+                        <!-- <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name" style="text-align: left;">
-                                    Certified Nurse Life Care Planner, CNLCP 
+                                    American Association of Nurse Life Care Planners 
                                     <br>
-                                    <span class="expirience-date">2016 - present</span>
+                                    <span class="expirience-date">2026 - present</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -204,7 +208,7 @@
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
-                        </div>
+                        </div> -->
 
 
                         <div class="skills__data">
