--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name" style="text-align: left;">
-                                    American Association of Nurse Life Care Planners 
+                                    Certified Nurse Life Care Planner (CNLCP)
                                     <br>
-                                    <span class="expirience-date">2016 - present</span>
+                                    <span class="expirience-date">American Association of Nurse Life Care Planners (AANLCP), 2016 - present</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
@@ -225,9 +225,9 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <span class="skills__name" style="text-align: left;">
-                                    Association of Rehab Nurses 
+                                    Certified Registered Rehabilitation Nurse (CRRN)
                                     <br>
-                                    <span class="expirience-date">2020 - present</span>
+                                    <span class="expirience-date">Association of Rehab Nurses (ARN), 2020 - present</span>
                                 </span>
                             </div>
                             <div class="skills__bar skills__html"></div>
