fixed bullet point

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <title>Summit Life Care Planning</title>
     </head>
     <style>
+        li {
+            margin-bottom: 10px;
+        }
     .section-title{
         color: rgb(108 138 165);
     }
@@ -35,7 +38,7 @@
             <nav class="nav bd-grid">
                 <div>
                     <!-- <a href="#" class="nav__logo">Marlon</a> -->
-                    git <img class="logo-image-header" src="assets/img/logo.png" alt="">
+                    <img class="logo-image-header" src="assets/img/logo.png" alt="">
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -104,7 +107,7 @@
                         <ul style="list-style: disc;margin-left: 20px;text-align: left;">
                         <!-- <ul style="text-align: center;"> -->
                             <li>Expertise as a nurse life care planner</li>
-                            <li>Extensive and ongoing experience as a nurse practitioner</li>
+                            <li>Extensive experience as a nurse practitioner</li>
                             <li>Excellent written and verbal communication skills</li>
                             <li>Strong team player</li>
                             <li>Calm and professional demeanor</li>
@@ -131,15 +134,15 @@
                             
                         </p>    -->
                         
-                        <ul style="list-style: disc;margin-left: 20px;text-align: left;">
+                        <ul style="list-style: disc; margin-left: 20px; text-align: left;">
                         <!-- <ul style="text-align: center;"> -->
-                            <li>Life Care Planner, Summit Life Care Planning, LLC, 2024 - present</li>
+                            <li>Life Care Planner, Summit Life Care Planning, LLC, <br> 2024 - present</li>
                             <li>Clinical Nurse Lead Life Care Planner, Promedica Verity Group, 2022 - 2024</li>
-                            <li>Life Care Planner, Promedica Verity Group, 2020 - 2024</li>
-                            <li>Life Care Planner, Bala Care Solutions (f/k/a Mona Yudkoff Rehab Consultants), 2015 - 2018</li>
-                            <li>Nurse Practitioner, St. Christopher's Hospital for Children, 2010 - 2025</li>
-                            <li>Case Manager, Bala Care Solutions (f/k/a Mona Yudkoff Rehab Consultants), 2008 - 2009 & 2015 - 2016</li>
-                            <li>Registered Nurse, D.C. Children's Hospital, 2006 - 2008</li>
+                            <li>Life Care Planner, Promedica Verity Group,<br> 2020 - 2024</li>
+                            <li>Life Care Planner, Bala Care Solutions (f/k/a Mona Yudkoff Rehab Consultants), <br>2015 - 2018</li>
+                            <li>Nurse Practitioner, St. Christopher's Hospital for Children, <br>2010 - 2025</li>
+                            <li>Case Manager, Bala Care Solutions (f/k/a Mona Yudkoff Rehab Consultants), <br> 2008 - 2009 & 2015 - 2016</li>
+                            <li>Registered Nurse, D.C. Children's Hospital, <br>2006 - 2008</li>
                         </ul>
                     </div>
                         <div>              
